endpoint /posts/findByUser/{userId}
